--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "animate.css": "^4.1.1"
+    "animate.css": "^4.1.1",
+    "ember-burger-menu": "^3.3.4",
+    "hamburgers": "^1.1.3"
   }
 }
